# src/main/java/warehouseLocation/domain/dto/ProductReqDto.java
@@ -2,6 +2,7 @@ package warehouseLocation.domain.dto;
 
 
 import jakarta.validation.constraints.NotBlank;
+import jakarta.validation.constraints.NotNull;
 import jakarta.validation.constraints.Size;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
@@ -10,9 +11,6 @@ import lombok.Data;
 import lombok.NoArgsConstructor;
 import lombok.ToString;
 
-
-//@Getter
-//@Setter
 @Data
 @ToString
 @AllArgsConstructor
@@ -22,27 +20,27 @@ public class ProductReqDto {
   @Size(min = 2, max = 10, message = "The productName must be from 2 to 10 characters.")
   private String productName;
 
-//  @NotBlank(message = "expiredDate is required.")
+  @NotBlank(message = "price is required.")
+  private String price;
+
+  @NotBlank(message = "category is required.")
+  private String categoryName;
+
+  @NotNull(message = "expiredDate is required.")
   private LocalDate expiredDate;
+
+  @NotBlank(message = "status is required.")
+  private String status;
 
   @NotBlank(message = "productName is required.")
   private String imageUrl;
 
-  @NotBlank(message = "price is required.")
-  private String price;
+  private LocalDateTime createdAt = LocalDateTime.now();// 생성자에 추가
 
-//  @NotBlank(message = "createdAt is required.")
-  LocalDateTime createdAt;
-
-//  @NotBlank(message = "updatedAt is required.")
-  LocalDateTime updatedAt;
-
-//  @NotBlank(message = "isValid is required.")
-  boolean isValid;
+  private LocalDateTime updatedAt = LocalDateTime.now(); // 생성자에 추가
 
 
   @Data
-//  @Builder
   @NoArgsConstructor
   public static class Edit {
     @NotBlank(message = "productName is required.")
